--- a/hackage-dark.user.css
+++ b/hackage-dark.user.css
@@ -2,7 +2,7 @@
 @name       Hackage Dark
 @namespace  https://github.com/MarcolateMilk
 @version    1.0.0
-@licence    BSD-3-Clause
+@license    BSD-3-Clause
 ==/UserStyle== */
 
 @-moz-document domain("hackage.haskell.org") {
