Fix regexp not targetting certain source files

--- a/hackage-dark.user.css
+++ b/hackage-dark.user.css
@@ -1428,7 +1428,7 @@
 
 }
 
-@-moz-document regexp("https://hackage.haskell.org/package/(.+)/docs/src/(.+)") {
+@-moz-document regexp("https://hackage.haskell.org/package/(.+)/src/(.+)") {
 
   pre {
     border: none;
