--- a/hackage-dark.user.css
+++ b/hackage-dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name       Hackage Dark
 @namespace  https://github.com/MarcolateMilk
-@version    1.0.0
+@version    1.0.1
 @license    BSD-3-Clause
 ==/UserStyle== */
 
@@ -765,6 +765,17 @@
 
   #interface td.doc p + p {
     margin-top: 0.8em;
+  }
+
+  .subs dt {
+    float: none;
+    margin: 0 0 4px 0;
+  }
+
+  .subs dd {
+    float: none;
+    padding-left: 0.5rem;
+    margin: 0 0 0.5rem 0;
   }
 
   .doc table {
